2006-01-22    <jeff@mini.nerble.net>

	* schedule.cc: Improved 'talk' schedule so that NPC won't talk
	until close, and will call to you like in the original.

2006-01-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc: Improved the previous fix to make it safer. Note
	  that level 2 compression is still incompatible with multimaps
	  (or, for that matter, so are the flex saves). I am still trying
	  to work out a way to fix that *and* keep compatibility with older
	  saves; relevant sections are tagged with a 'TODO:'. Any takers?
	* gamewin.cc: Fixed bug in loading of multimap games. Basically,
	  only map #0 would be loaded, causing data loss when saving maps
	  or games unless the player visited the other maps.
	* actors.cc: approach_another now moves NPCs to the correct
	  destination map before trying to pathfind.
	
2006-01-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed resurrection bug -- using (e.g.) Death Bolt
	  resulted in a body which would not be resurrected, unlike what
	  happened in the original.
	* gamedat.cc: Fixed errors on restoring from multimap savegame
	  or initgame.
	
2006-01-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/intrinsics.cc: Virtue stones should use the map number
	  they are in, not of the map being displayed.

2006-01-14    <jeff@mini.nerble.net>

	* exult.cc: "Combo" selection is now done with single-clicking or
	dragging.  Shapes added are selected, and one can toggle by
	holding down the Control key.  Flat tiles are no longer added.

2006-01-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed cache-out bug which prevented eggs from reseting when
	  teleporting between maps.
	* usecode/intrinsics.cc: Multimap support for display_area
	  intrinsic.

2006-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc: Checking for the existance of ireg files before saving
	  them to zip files prevents crashes when saving new maps for existing
	  games.